--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,7 +1,7 @@
 version: "3"
 services:
   comp405-inventory:
-    image: comp-inventory
+    image: teknicallity/comp405-inventory:latest
     ports:
       - "8198:8198"
     restart: always
@@ -14,11 +14,13 @@ services:
       ADMIN_USER: "root"
       ADMIN_PASSWORD: "changeme"
       RESET_ON_RESTART: "yes"
+    volumes:
+      - .inventory_data:/etc/comp405-inventory/data
     depends_on:
       - mysql-inventory
 
   mysql-inventory:
-    image: "mysql:8.0.40-bookworm"
+    image: "mysql:9.1.0"
     restart: always
     environment:
       MYSQL_USER: "comp405"
@@ -26,4 +28,5 @@ services:
       MYSQL_DATABASE: "inventory_system"
       MYSQL_RANDOM_ROOT_PASSWORD: "yes"
     volumes:
-      - ./mysql_comp405_inventory:/var/lib/mysql
+      - ./mysql_comp405_inventory/data:/var/lib/mysql
+      - ./mysql_comp405_inventory/logs:/var/log/mysql
