--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -78,7 +78,7 @@ jobs:
       - name: Tag as latest (only for non-pre-release)
         if: env.PRE_RELEASE == 'false'
         run: |
-          docker tag teknicallity/comp405-inventory:${{ github.ref_name }} teknicallity/comp405-inventory:latest
+          docker tag teknicallity/comp405-inventory:${{ github.ref_name }} teknicallity/comp405-inventory:latest teknicallity/comp405-inventory:latest-pre
           docker push teknicallity/comp405-inventory:latest
 
       - name: Tag as latest-pre (only for pre-release)
