--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -81,6 +81,7 @@ jobs:
           docker tag teknicallity/comp405-inventory:${{ github.ref_name }} teknicallity/comp405-inventory:latest
           docker tag teknicallity/comp405-inventory:${{ github.ref_name }} teknicallity/comp405-inventory:latest-pre
           docker push teknicallity/comp405-inventory:latest
+          docker push teknicallity/comp405-inventory:latest-pre
 
       - name: Tag as latest-pre (only for pre-release)
         if: env.PRE_RELEASE == 'true'
