Docker image runs as non-root

--- a/uwsgi.ini
+++ b/uwsgi.ini
@@ -7,9 +7,9 @@ static-map = /static=/etc/comp405-inventory/app/static
 
 master = true
 processes = 2
-socket = /etc/comp405-inventory/inventory.sock
-chmod-socket = 664
+socket = /tmp/mysite.sock
+;chmod-socket = 664
 vacuum = True
-uid = www-data
-gid = www-data
+;uid = www-data
+;gid = www-data
 die-on-term = true
